--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: self-hosted 
     steps:
       - name: Pull image from docker hub
-        run: docker pull lepakshia/nodejs_backend:latest
+        run: sudo docker pull lepakshia/nodejs_backend:latest
       - name: Delete old container
         run: docker rm -f nodejs_backend-container  
       - name: Run Docker Container
