--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Pull image from docker hub
         run: sudo docker pull lepakshia/nodejs_backend:latest
       - name: Delete old container
-        run: docker rm -f nodejs_backend-container  
+        run: sudo docker rm -f nodejs_backend-container  
       - name: Run Docker Container
-        run: docker run -d -p 4000:4000 --name nodejs_backend-container -e DB='${{ secrets.DB }}' lepakshia/nodejs_backend
+        run: sudo docker run -d -p 4000:4000 --name nodejs_backend-container -e DB='${{ secrets.DB }}' lepakshia/nodejs_backend
 
 
  
